# Altverse-Compute

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs  config.json  index.d.ts  index.js  package.json  test.js  test.ts
protos/: game.proto
src/: bus.rs  config.rs  lib.rs  props.rs  structures.rs
src/assets/: enemy.rs  mod.rs
src/assets/effect/: mod.rs  slow.rs
src/assets/entity/: bee.rs  bullet.rs  changer.rs  drop.rs  fade.rs  flame.rs  flamebullet.rs  flamesniper.rs  flametrail.rs  homing.rs  immune.rs  mod.rs  normal.rs  pull.rs  slow.rs  sniper.rs  vortex.rs  wall.rs
src/managers/: mod.rs  player.rs  sender.rs  world.rs
src/network/: diffs.rs  mod.rs
src/packager/: diff.rs  mod.rs
src/resources/: area.rs  effect.rs  entity.rs  mod.rs  player.rs  world.rs
src/resources/assets/: effect.rs  entity.rs  hero.rs  mod.rs
src/resources/assets/effects/: draining.rs  mod.rs  slipped.rs  slow.rs
src/resources/assets/entities/: bee.rs  cloud.rs  draining.rs  drop.rs  fade.rs  flame.rs  flamesniper.rs  homing.rs  homingsniper.rs  icicle.rs  immune.rs  leaf.rs  mod.rs  normal.rs  sizer.rs  slow.rs  sniper.rs  stormcloud.rs  wall.rs
src/resources/assets/heroes/: maven.rs  mod.rs  revenant.rs
src/resources/utils/: diff.rs  input.rs  join.rs  mod.rs  vector.rs
src/units/: effect.rs  entity.rs  mod.rs  player.rs  structures.rs  vector.rs
src/world/: area.rs  mod.rs  warp.rs  world.rs
test/: config.json  index.ts
test/worlds/: world.json  world2.json
