
[package]
authors = ["EtherCD <ethercd@proton.me>"]
edition = "2024"
name = "altverse_rs"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4.42"
diff-struct = "0.5.3"
napi = "3.0.0"
napi-derive = "3.0.0"
once_cell = "1.21.3"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
lazy_static = "1.5.0"
lz4-compression = "0.7.0"
lz4_flex = "0.12.0"
rmp-serde = "1.3.0"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
