[package]
authors = ["EtherCD <ethercd@proton.me>"]
edition = "2024"
name = "altverse-compute"
version = "0.5.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4.42"
napi = "3.0.0"
napi-derive = "3.0.0"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
lazy_static = "1.5.0"
prost = "0.14.1"

[build-dependencies]
napi-build = "2"
prost-build = "0.14.1"

[profile.release]
lto = true
strip = "symbols"
